// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionBody should match snapshot 1`] = `
<div>
  <div
    class="px-2"
    data-testid="2"
  >
    <img
      class=""
      src=""
    />
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Chili con Carne vom Galloway Rind
        </span>
        <p
          class=""
        >
          Mexikanischer Hackfleisch-Bohneneintopf mit Sauerrahm und frischem Brot
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          11.50
        </span>
        <button
          aria-label="info-11.5"
          class="p-1"
          id="info-11.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Sweet Potato Fries and Truffle
        </span>
        <p
          class=""
        >
          Pommes frites von der Süßkartoffel mit hausgemachter Trüffelmayonnaise
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          7.50
        </span>
        <button
          aria-label="info-7.5"
          class="p-1"
          id="info-7.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Veganes Chili sin Carne
        </span>
        <p
          class=""
        >
          Mexikanischer Soja-Bohneneintopf mit frischem Brot
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          10.50
        </span>
        <button
          aria-label="info-10.5"
          class="p-1"
          id="info-10.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Bacon Cheese Fries
        </span>
        <p
          class=""
        >
          Pommes frites mit herzhafter Käsesauce und knusprig gebratenen Baconwürfeln vom Strohschwein
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          5.50
        </span>
        <button
          aria-label="info-5.5"
          class="p-1"
          id="info-5.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Chili Cheese Fries
        </span>
        <p
          class=""
        >
          Pommes frites mit pikantem Chili con Carne, Jalapeños und leckerer Cheddarsauce
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          9.00
        </span>
        <button
          aria-label="info-9"
          class="p-1"
          id="info-9"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Veganes Sandwich mit einer herzhaften Algencreme 'Tuna-Style' 
        </span>
        <p
          class=""
        >
          Creme aus Algen und Kichererbsen mit frischer Paprika, roten Zwiebeln, Mais und knusprigen Kartoffelchips auf geröstetem Weißbrot mit Gurken Tomaten und Eisbergsalat dazu Pommes Frite
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          12.50
        </span>
        <button
          aria-label="info-12.5"
          class="p-1"
          id="info-12.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Carpaccio nach Cipranis Originalrezept
        </span>
        <p
          class=""
        >
          vom Rinderfilet, mariniert mit Trüffelöl, Rauke Salat, Ciprianisauce und frischen Hobel von Italienischem Hartkäse 
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          13.50
        </span>
        <button
          aria-label="info-13.5"
          class="p-1"
          id="info-13.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionBody should match snapshot when extra is true 1`] = `
<div>
  <div
    class="px-2"
    data-testid="2"
  >
    <img
      class=""
      src="/trude/salat.jpg"
    />
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Kleiner Gartensalat
        </span>
        <p
          class=""
        >
          Bunte Blattsalate mit Tomate, Gurke, Möhre, Chicorée und frischen Kräutern
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          7.00
        </span>
        <button
          aria-label="info-7"
          class="p-1"
          id="info-7"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Großer Gartensalat
        </span>
        <p
          class=""
        >
          Bunte Blattsalate mit Tomate, Gurke, Paprika, frischen Kräutern und gebackenen Flammkuchenchips
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          9.50
        </span>
        <button
          aria-label="info-9.5"
          class="p-1"
          id="info-9.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Caesar's Salat
        </span>
        <p
          class=""
        >
          Knackiger Römersalat und Kirschtomaten in einem mit feinen Kräutern und zerstoßenem Pfeffer  mit Croûtons und Parmesanspänen
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          10.50
        </span>
        <button
          aria-label="info-10.5"
          class="p-1"
          id="info-10.5"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Rucola Melonoensalat
        </span>
        <p
          class=""
        >
          Frischer Rucola und saftige Honigmelone mit mariniertem Hirtenkäse
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          13.00
        </span>
        <button
          aria-label="info-13"
          class="p-1"
          id="info-13"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-between bg-blueGray-400"
    >
      <div
        class=""
      >
        <span
          class="font-semibold"
        >
          Kerniger Nusssalat
        </span>
        <p
          class=""
        >
          Bunte Blattsalate, Apfelchips, Walnüsse, Cashewkerne, Croûtons mit Möhren und Kirschtomaten
        </p>
      </div>
      <div
        class="flex flex-col items-center"
      >
         
        <span>
          10.00
        </span>
        <button
          aria-label="info-10"
          class="p-1"
          id="info-10"
          role="button"
        >
          <svg
            fill="currentColor"
            height="15"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 4.75c0-0.412 0.338-0.75 0.75-0.75h0.5c0.412 0 0.75 0.338 0.75 0.75v0.5c0 0.412-0.338 0.75-0.75 0.75h-0.5c-0.412 0-0.75-0.338-0.75-0.75v-0.5z"
            />
            <path
              d="M10 12h-4v-1h1v-3h-1v-1h3v4h1z"
            />
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-2 rounded-sm text-blueGray-600 bg-amber-100"
    >
      <div
        class="flex"
      >
        <h3
          class="text-sm font-semibold md:text-lg text-blueGray-500"
        >
          Beilage zum Salat
           
        </h3>
      </div>
      <div
        class="flex items-start justify-between gap-x-1 md:text-lg"
      >
        <span
          class="mb-2 text-sm font-normal md:text-lg "
        >
          Kleine gegrillte Hähnchenbrust 120g vom Kikok
           
        </span>
        <div
          class="flex items-center gap-x-1"
        >
          <span
            class="text-sm font-light tracking-tight md:text-lg"
          >
             
          </span>
          <span
            class="font-normal"
          >
            5.50
             
          </span>
        </div>
      </div>
      <div
        class="flex items-start justify-between gap-x-1 md:text-lg"
      >
        <span
          class="mb-2 text-sm font-normal md:text-lg "
        >
          Gebratene Champignons und Kräuterseitlinge
           
        </span>
        <div
          class="flex items-center gap-x-1"
        >
          <span
            class="text-sm font-light tracking-tight md:text-lg"
          >
             
          </span>
          <span
            class="font-normal"
          >
            3.50
             
          </span>
        </div>
      </div>
      <div
        class="flex items-start justify-between gap-x-1 md:text-lg"
      >
        <span
          class="mb-2 text-sm font-normal md:text-lg "
        >
          Parmeasan
           
        </span>
        <div
          class="flex items-center gap-x-1"
        >
          <span
            class="text-sm font-light tracking-tight md:text-lg"
          >
             
          </span>
          <span
            class="font-normal"
          >
            2.50
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
